removed welcome button made just as a message, added todays date to home scree, fixed footer to stay at bottom of page, menu tabs are now active but still need page content, fixed main paragraph alignment, cleaned up code

--- a/web/styles/doctor.css
+++ b/web/styles/doctor.css
@@ -38,8 +38,8 @@ html,body,h1,h2,h3,h4,h5,h6 {
     outline: none;
 }
 
-/* adding color to accordion button if clicked on */
-.active, .accordion:hover{
+/* adding color to accordion button if hovered over */
+.accordion:hover{
     background-color: #87CEEB;
 }
 
@@ -54,6 +54,7 @@ html,body,h1,h2,h3,h4,h5,h6 {
 .active:after{
     content: "\2212";
 }
+
 .panel{
     padding: 0 18px;
     background-color: white;
@@ -72,13 +73,13 @@ html,body,h1,h2,h3,h4,h5,h6 {
 /* used for column page format */
 .columnLeft{
     float: left;
-    width: 20%;
+    width: 25%;
     padding: 10px;
 }
 
 .column {
     float: left;
-    width: 33.33%;
+    width: 35%;
     padding: 10px;
 }
 
@@ -103,3 +104,10 @@ th, td{
 tr:nth-child(even){
     background-color: #f2f2f2;
 }
+
+#footer {
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+}
+
